extends Area2D

@export var speed: float = 150.0
@export var damage: int = 15
@export var lifetime: float = 3.0

var direction: Vector2 = Vector2.RIGHT
var insult_text: String = ""

@onready var label: Label = $InsultBubble/Label
@onready var bubble: NinePatchRect = $InsultBubble

var insults_list = [
	"$#@%!",
	"&*@#!",
	"@$%*!",
	"#&@!",
	"*$#@!",
	"@%&*!",
	"$*@#!",
	"&#%@!"
]

func _ready():
	# Seleccionar un insulto aleatorio
	insult_text = insults_list[randi() % insults_list.size()]
	label.text = insult_text
	
	# Configurar el tiempo de vida
	var timer = Timer.new()
	timer.wait_time = lifetime
	timer.one_shot = true
	timer.timeout.connect(_on_lifetime_expired)
	add_child(timer)
	timer.start()
	
	# Conectar se帽al de colisi贸n
	body_entered.connect(_on_body_entered)
	
	print(" Pap谩 Roberto grit贸: " + insult_text)

func _physics_process(delta):
	# Mover el proyectil
	global_position += direction * speed * delta
	
	# Efecto de flotaci贸n (como globo de texto)
	global_position.y -= 20 * delta

func _on_body_entered(body):
	if body.is_in_group("player"):
		# Aplicar da帽o al jugador
		if body.has_method("take_damage"):
			body.take_damage(damage)
			print(" 隆El insulto hiri贸 al jugador por " + str(damage) + " de da帽o!")
		queue_free()
		
	if body.is_in_group("world colition"):
		print(" Bala choc贸 con pared")
		queue_free()

func _on_lifetime_expired():
	# El insulto se desvanece
	print(" El insulto '" + insult_text + "' se desvaneci贸...")
	queue_free()
